changed: Dutch and German

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -111,7 +111,7 @@
         "login": {
             "heading": "Login Required",
             "msg": [
-                "In order to submit your queued data, you need to login. If you want to do this now, you will be redirected, and loose unsaved information.",
+                "In order to submit your queued data, you need to login. If you want to do this now, you will be redirected, and lose unsaved information.",
                 "Would you like to login now or later?"
             ],
             "negButton": "Later",
@@ -195,9 +195,13 @@
         "es": "Spanish",
         "he": "Hebrew",
         "hi": "Hindi",
+        "km": "Khmer",
         "nl": "Dutch",
+        "ro": "Romanian",
         "supported": "Languages supported: ",
-        "sw": "Swahili"
+        "sw": "Swahili",
+        "th": "Thai",
+        "vi": "Vietnamese"
     },
     "page": {
         "modernbrowsers": {
