--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -16,14 +16,14 @@
             "msg": "Eine neue Version dieser Anwendung wurde heruntergeladen. Aktualisieren Sie diese Seite, um die aktualisierte Version zu laden."
         },
         "loaderror": {
-            "editadvice": "Es wird empfohlen, diesen Eintrag nicht zu bearbeiten bis dieser behoben ist.",
+            "editadvice": "Es wird empfohlen, diesen Eintrag nicht zu bearbeiten bis dieser Fehler behoben wurde.",
             "entryadvice": "Es wird empfohlen, dieses Formular für die Dateneingabe verwenden, bis das Problem behoben wurde.",
             "heading": "Ladefehler",
             "msg1": "Fehler beim Laden des Formulars aufgetreten.",
-            "msg2": "Bitte wenden Sie sich per E-Mail mit dem Link-Link und die Fehlermeldung im Handumdrehen:",
+            "msg2": "Bitte senden Sie eine E-Mail mit der Adresse dieser Seite und die untenstehende Fehlermeldung an __emailLink__.",
             "heading_plural": "Ladefehler",
             "msg1_plural": "Fehler beim Laden des Formulars aufgetreten.",
-            "msg2_plural": "Bitte wenden Sie sich per E-Mail mit dem Link-Link und die Fehlermeldung im Handumdrehen:"
+            "msg2_plural": "Bitte senden Sie eine E-Mail mit der Adresse dieser Seite und die untenstehende Fehlermeldung an __emailLink__."
         },
         "logout": {
             "heading": "Abmelden",
@@ -32,14 +32,14 @@
         "offlinesupported": {
             "heading": "Formular funktioniert offline!",
             "msg": [
-                "Dieses Formular kann nicht geladen und ohne Internetverbindung auf diesem Gerät verwendet werden. Markieren Sie es als Lesezeichen für einfachen Offline-Zugriff.",
-                "Datensätze werden automatisch gespeichert und in die Warteschlange gestellt, bis in Ihrem Browser eine Internetverbindung verfügbar ist. Wenn das Programm online ist, werden die Einträge automatisch eingereicht - eines nach dem anderen.",
-                "Erst nachdem der Datensatz erfolgreich übermittelt wurde, wird es aus der Warteschlange entfernt. Sie können sicher schließen Sie Ihren Browser und Gerät mit Gegenständen in der Warteschlange. Sie werden immer noch da nächste Mal, wenn Sie das Formular laden."
+                "Dieses Formular kann jetzt geladen und ohne Internetverbindung auf diesem Gerät verwendet werden. Speichern Sie es als Lesezeichen um es später einfach offline zu öffnen.",
+                "Datensätze werden automatisch gespeichert und in die Warteschlange gestellt bis in Ihrem Browser eine Internetverbindung verfügbar ist. Wenn Sie wieder online sind werden die Datensätze automatisch versandt - einer nach dem anderen.",
+                "Erst nachdem der Datensatz erfolgreich versandt wurde wird er aus der Warteschlange entfernt. Sie können Ihren Browser in der Zwischenzeit problemlos schließen oder Ihr Gerät ausschalten. Die Datensätze werden noch immer da sein wenn Sie das nächste Mal dieses Formular laden."
             ]
         },
         "offlineunsupported": {
             "heading": "Anwendung kann nicht offline gestartet werden",
-            "msg": "Offline-Anwendung starten wird nicht von Ihrem Browser unterstützt. Sie können die Umfrage ohne diese Funktion verwenden oder Optionen für die Lösung dafür ansehen.",
+            "msg": "Ihr Browser unterstützt keine Offline-Anwendungen. Sie können dieses Formular auch ohne diese Funktion verwenden oder eine der folgenden Optionen als Lösung auswählen.",
             "negButton": "Benutzen",
             "posButton": "Optionen anzeigen"
         },
@@ -51,35 +51,35 @@
             "msg": "__recordName__ wurde geladen"
         },
         "recordnotfound": {
-            "msg": "Datensatz konnte nicht abgerufen werden oder enthält keine Daten. "
+            "msg": "Datensatz konnte nicht abgerufen werden oder enthielt keine Daten. "
         },
         "recordsavesuccess": {
             "draftmsg": "Datensatz als Entwurf gespeichert.",
-            "finalmsg": "Datensatz in der Warteschlange für die Einreichung."
+            "finalmsg": "Datensatz wurde für den Versand in die Warteschlange gestellt."
         },
         "submission": {
-            "msg": "Einreichen...",
-            "redirectmsg": "Sie werden automatisch nach der Einreichung umgeleitet werden"
+            "msg": "Sendet...",
+            "redirectmsg": "Sie werden automatisch nach dem Versand umgeleitet."
         },
         "submissionerror": {
-            "authrequiredmsg": "Authentifizierung erforderlich. Bitte authentifizieren __dir__ in einem anderen Browser-Tab, und versuchen Sie es erneut.",
+            "authrequiredmsg": "Authentifizierung erforderlich. Bitte melden Sie sich __here__ in einem anderen Browser-Tab an, und versuchen Sie es erneut.",
             "fnfmsg": [
-                "Die folgenden Mediendateien konnte nicht abgerufen werden: __failedFiles__. Die Abgabe ging weiter, ohne diese Dateien.",
+                "Die folgenden Mediendateien konnte nicht abgerufen werden: __failedFiles__. Die Speicherung wurde ohne diese Dateien durchgeführt.",
                 "Bitte kontaktieren Sie den Support per E-Mail, um einen Fehler zu melden und wenn möglich zu erklären, wie das Problem reproduziert werden kann."
             ],
-            "heading": "Übermittlung fehlgeschlagen"
+            "heading": "Versand fehlgeschlagen"
         },
         "submissionsuccess": {
-            "heading": "Übermittlung erfolgreich",
+            "heading": "Versand erfolgreich",
             "msg": "Ihre Daten wurden gesendet!",
-            "redirectmsg": "Sie werden jetzt umgeleitet."
+            "redirectmsg": "Sie werden jetzt weitergeleitet."
         },
         "validationerror": {
             "msg": "Das formular enthält Fehler. Bitte beachten Sie die rot markierten Felder."
         },
         "validationsuccess": {
             "heading": "OK",
-            "msg": "Formular ist geprüft!"
+            "msg": "Formular ist gültig!"
         },
         "xpatherror": {
             "heading": "Formel-Fehler",
@@ -96,8 +96,8 @@
         "deleteall": {
             "heading": "PANIK!",
             "msg": [
-                "Dadurch werden alle Ihre Daten in der Warteschlange und alle Ihre Formulare aus dem Browserspeicher entfernt. Die Daten sind für immer verloren. Verwenden Sie diese Funktion nur als letztes Mittel, wenn der Browserspeicher beschädigt wurde.",
-                "Schließen Sie zuerst alle anderen Enketo Browserreiter.",
+                "Hierdurch werden alle Ihre Daten in der Warteschlange und alle Ihre Formulare aus dem Browserspeicher entfernt. Die Daten sind dann für immer verloren. Verwenden Sie diese Funktion nur als letzte Option wenn der Browserspeicher beschädigt wurde.",
+                "Schließen Sie zuerst alle anderen Enketo Tabs.",
                 "Die Seite wird neu geladen. Wenn Sie einen Fehler sehen, müssen Sie diese Aktion wiederholen.",
                 "Sind Sie sicher, dass Sie dies tun wollen?"
             ],
@@ -105,14 +105,14 @@
         },
         "discardcurrent": {
             "heading": "Nicht gespeicherte Änderungen",
-            "msg": "Das aktuelle Formular enthält nicht gespeicherte Änderungen.  Möchten Sie einen Eintrag ohne Speichern der Änderungen auf das Formular indem Sie gearbeitet haben laden?",
+            "msg": "Das aktuelle Formular enthält nicht gespeicherte Änderungen.  Möchten Sie einen anderen Eintrag öffnen ohne Ihre Änderungen im aktuellen Formular zu speichern?",
             "posButton": "Weiter ohne Speichern"
         },
         "login": {
             "heading": "Anmeldung erforderlich",
             "msg": [
-                "Um Ihre Daten in der Warteschlange einzureichen, müssen Sie sich anmelden. Wenn Sie dies jetzt tun wollen, werden Sie umgeleitet und verlieren nicht-gespeicherte Informationen.",
-                "Möchten Sie jetzt oder später sich anmelden?"
+                "Um die Daten die sich in der Warteschlange befinden zu senden müssen Sie sich anmelden. Wenn Sie dies jetzt tun wollen, werden Sie weitergeleitet und verlieren nicht-gespeicherte Informationen.",
+                "Möchten Sie sich jetzt oder später anmelden?"
             ],
             "negButton": "später",
             "posButton": "Jetzt anmelden"
@@ -120,28 +120,28 @@
         "print": {
             "a4": "A4",
             "heading": "Druckeinstellungen auswählen",
-            "landscape": "Landschaft",
-            "letter": "Buchstabe",
+            "landscape": "Querformat",
+            "letter": "Letter",
             "msg": "Um einen optimierten Druck vorzubereiten, wählen Sie bitte die Druckeinstellungen nachfolgend",
             "orientation": "Papierausrichtung",
-            "portrait": "Porträt",
+            "portrait": "Hochformat",
             "posButton": "Vorbereitung",
             "psize": "Papierformat",
-            "reminder": "Denken Sie daran, die gleichen Druckeinstellungen im Druckmenü des Browsers im Nachhinein zu setzen!"
+            "reminder": "Denken Sie daran danach die gleichen Druckeinstellungen im Druckmenü des Browsers zu setzen!"
         },
         "save": {
-            "existingerror": "Dieser Satzname oder die ID sind bereits vorhanden.",
-            "hint": "Diese Namen können Sie leicht finden Sie Ihre Entwürfe Aufzeichnung um sie später zu beenden.",
-            "msg": "Es gibt ungesicherte Änderungen, möchten Sie, ohne Speichern weitermachen?",
+            "existingerror": "Dieser Datensatz oder die ID sind bereits vorhanden.",
+            "hint": "Dieser Name hilft Ihnen um später Ihren Entwurf dieses Datensatzes zu finden und fertigzustellen.",
+            "msg": "Es gibt ungesicherte Änderungen. Möchten Sie ohne zu speichern fortfahren?",
             "name": "Datensatzname",
             "posButton": "Speichern & Schließen",
-            "renamemsg": "Sind Sie sicher, dass Sie __currentName__ umbenennen __newName__ suchen?",
-            "unkownerror": "Während Sie versuchen, Daten zu speichern ist ein unbekannter Fehler aufgetreten."
+            "renamemsg": "Sind Sie sicher, dass Sie __currentName__ in __newName__ umbenennen wollen?",
+            "unkownerror": "Beim Speichern is ein unbekannter Fehler aufgetreten."
         }
     },
     "contact": {
         "admin": "Kontaktieren Sie den Ersteller der Umfrage bitte.",
-        "support": "Kontaktieren __supportEmail__ bitte. \""
+        "support": "Bitte kontaktieren Sie __supportEmail__'"
     },
     "enketo": {
         "power": "Bereitgestellt von"
@@ -150,9 +150,9 @@
         "code": "Fehlercode: __code__",
         "econnrefused": "Konnte nicht mit Server verbinden",
         "encryptionnotsupported": "Dieses Formular erfordert lokale Verschlüsselung von Datensätzen. Leider wird dies noch nicht unterstützt. Wir empfehlen die Verwendung von ODK Collect für die Datensammlung mit diesem Formular.",
-        "instancenotfound": "Datensatz nicht vorhanden. Es ist wahrscheinlich abgelaufen.",
-        "invalidediturl": "Keine gültige URL bearbeiten",
-        "notfoundinformlist": "Formular mit ID __formId__ nicht in der / formList gefunden",
+        "instancenotfound": "Datensatz nicht vorhanden. Er ist wahrscheinlich abgelaufen.",
+        "invalidediturl": "Keine gültige Bearbeitungs-URL",
+        "notfoundinformlist": "Formular mit ID __formId__ wurde nicht in /formList gefunden",
         "pagenotfound": "Seite nicht gefunden",
         "surveyidnotactive": "Umfrage mit dieser ID ist nicht mehr aktiv",
         "surveyidnotfound": "Umfrage mit dieser ID nicht gefunden",
@@ -166,8 +166,8 @@
         "logout": "Abmelden",
         "pages": {
             "back": "Zurück",
-            "end": "Gehe zum Ende",
-            "next": "Als Nächstes",
+            "end": "Ans Ende gehen",
+            "next": "Weiter",
             "return": "Zurück zum Anfang"
         }
     },
@@ -180,7 +180,7 @@
             "btn": "Senden"
         },
         "validate": {
-            "btn": "Validierung"
+            "btn": "Prüfen"
         }
     },
     "here": "hier",
@@ -194,16 +194,16 @@
         "he": "Hebräisch",
         "nl": "Niederländisch",
         "supported": "Unterstützte Sprachen:",
-        "sw": "Suahili"
+        "sw": "Suaheli"
     },
     "page": {
         "modernbrowsers": {
             "heading": "Moderne Browser",
             "ie": {
-                "heading": "Warum keine Liebe für jene bösen veralteten Versionen von Internet Explorer?",
-                "msg": "Wir verstehen, dass einige Menschen, vor allem diejenigen, die für große Bürokratien, die keinen Zugang zu den neuesten und besten Browsern. Da wir wissen, wie groß das Web könnte mit den richtigen Werkzeugen können, müssen wir große Empathie für Benutzer in dieser misslichen Lage. Normalerweise würden wir versuchen, Workarounds zur Verfügung, einige beliebte veralteten Browser unterstützen. , Ist der Grund, Enketo besteht jedoch die Verfügbarkeit einiger sehr extravagant Spitzentechnologien. Leider sind damit Nutzer älterer Browser kein Glück."
+                "heading": "Warum wir die bösen veralteten Versionen von Internet Explorer nicht lieben?",
+                "msg": "Wir verstehen, dass einige Leute, vor allem diejenigen, die für große Institutionen arbeiten, keinen Zugang zu den neuesten und besten Browsern haben. Da wir wissen, wie großartig das Web mit den richtigen Programmen sein könnte, haben wir großes Mitgefühl für Benutzer in dieser traurigen Lage. Normalerweise würden wir versuchen, provisorische Lösungen bereitzustellen um einige beliebte veralteten Browser zu unterstützen. Allerdings existiert Enketo um mehrere nagelneue Technologien zu verwenden. Leider haben die Benutzer dieser ältereren Browser daher kein Glück."
             },
-            "msg1": "Autsch! Leider wurden Sie wahrscheinlich hierher geschickt, weil Ihr Browser veraltet ist  oder vielleicht haben Sie seine Hauptmerkmale mit Hilfe des \"Private-Browsing-Modus\" deaktiviert.",
+            "msg1": "Autsch! Leider wurden Sie wahrscheinlich hierher geschickt, weil Ihr Browser veraltet ist. Oder vielleicht haben Sie einige Browserfunktionen mit Hilfe des \"Privates Surfen\" deaktiviert.",
             "msg2": "Wenn Sie einen veralteten Browser verwenden, empfehlen wir Ihnen ein Upgrade auf eine neuere Version eines der folgenden ausgezeichneten modernen Browser:"
         },
         "offline": {
@@ -216,9 +216,9 @@
             "heading": "Werte eingeben"
         },
         "login": {
-            "heading": "Geben Sie Ihre Anmeldeinformationen ein __server__",
+            "heading": "Geben Sie Ihre Anmeldeinformationen für __server__ ein ",
             "password": "Passwort",
-            "remember": "Denken Sie daran, auf diesem Computer",
+            "remember": "Diesen Computer merken",
             "submit": "Senden",
             "username": "Benutzername"
         }
@@ -238,13 +238,13 @@
     },
     "submission": {
         "http0": "Fehlgeschlagen (offline?).",
-        "http2xx": "Unerwartete Antwort bei der Einreichung von Daten.",
-        "http400": "Der Datenserver akzeptiert die Daten nicht.",
-        "http403": "Nicht erlaubt, Daten zu diesem Datenserver zu stellen.",
-        "http404": "Übergabedienst auf Daten-Server nicht gefunden.",
+        "http2xx": "Unerwartete Antwort beim Datenversand.",
+        "http400": "Der Datenserver hat keine Daten akzeptiert.",
+        "http403": "Nicht erlaubt Daten zu diesem Datenserver zu übermitteln.",
+        "http404": "Sende-Service wurde auf dem Datenserver nicht gefunden.",
         "http413": "Datenmenge ist zu groß.",
-        "http4xx": "Unbekanntes Einreichungsproblem auf Datenserver.",
+        "http4xx": "Unbekanntes Sendeproblem auf Datenserver.",
         "http500": "Der Datenserver für das Formular oder der Enketo Server sind ausgefallen. Bitte versuchen Sie es später noch einmal oder kontaktieren __supportEmail__"
     },
-    "version": "version:"
+    "version": "Version:"
 }
