--- a/locales/el/translation.json
+++ b/locales/el/translation.json
@@ -189,12 +189,19 @@
     },
     "langs": {
         "ar": "Αραβικά",
+        "de": "Γερμανικά",
+        "el": "Ελληνικά",
         "en": "Αγγλικά",
         "es": "Ισπανικά",
         "he": "Εβραϊκά",
+        "hi": "Ινδικά",
+        "km": "Χμερ",
         "nl": "Ολλανδικά",
+        "ro": "Ρουμανικά",
         "supported": "Υποστηριζόμενες γλώσσες:",
-        "sw": "Σουαχίλι"
+        "sw": "Σουαχίλι",
+        "th": "Ταϊλανδέζικα",
+        "vi": "Βιετναμέζικα"
     },
     "page": {
         "modernbrowsers": {
