Added: missing translation strings for default required and invalid messages

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -139,6 +139,10 @@
       "unkownerror": "An unknown error occurred when trying to save data."
     }
   },
+  "constraint": {
+    "invalid": "Value not allowed",
+    "required": "This field is required"
+  },
   "contact": {
     "admin": "Contact the survey administrator please.",
     "support": "Contact __supportEmail__ please.'"
