fixed: missing media files will not cause all media saving and loading to fail, closes https://github.com/kobotoolbox/enketo-express/issues/320

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -163,6 +163,7 @@
     "encryptionnotsupported": "This form requires local encryption of records. Unfortunately this not yet supported. We recommend using ODK Collect for data collection with this form.",
     "instancenotfound": "Record not present. It may have expired.",
     "invalidediturl": "Not a valid edit URL",
+    "loadfailed": "Failed to load __resource__",
     "notfoundinformlist": "Form with ID __formId__ not found in /formList",
     "pagenotfound": "Page not Found",
     "surveyidnotactive": "Survey with this ID no longer active",
