--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -266,6 +266,7 @@
     "http0": "Failed (Offline?).",
     "http2xx": "Unexpected response when submitting data.",
     "http400": "Data server did not accept data.",
+    "http401": "Authentication problem with data server.",
     "http403": "Not allowed to post data to this data server.",
     "http404": "Submission service on data server not found.",
     "http413": "Data is too large.",
